--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ body:before {
   font-size: 1.5rem;
 }
 
+.subtitle {
+  font-size: 1rem;
+}
+
 .number-screen {
   font-size: 5rem;
   padding: 3rem 4rem;
